# InstagramBot

./: .gitignore  README.md  package-lock.json  package.json  start.py
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  main.py  security.py
backend/app/ai/: base.py  claude_provider.py  factory.py  google_provider.py  openai_provider.py  prompt.py
backend/app/api/: auth.py  comments.py  conversations.py  dashboard.py  knowledge.py  preferences.py  rules.py  settings.py  simulate.py
backend/app/channels/: base.py  factory.py
backend/app/channels/instagram/: base.py  factory.py  graph_api_client.py  instagrapi_client.py
backend/app/channels/tidio/: api_client.py  base.py  webhook_handler.py
backend/app/instagram/: base.py  factory.py  graph_api_client.py  instagrapi_client.py
backend/app/knowledge/: loader.py  relevance.py  sections.py
backend/app/models/: __init__.py  comment_event.py  conversation.py  knowledge.py  preference.py  rule.py  settings.py  webhook_event.py
backend/app/schemas/: comment_event.py  conversation.py  dashboard.py  knowledge.py  preference.py  rule.py  settings.py
backend/app/services/: attachment_store.py  comment_trigger.py  message_handler.py  preference_learner.py  translator.py
backend/app/webhook/: parser.py  router.py
backend/tests/: conftest.py  test_ai_fallback.py  test_ai_provider.py  test_comment_trigger.py  test_knowledge_parser.py
backend/tests/test_api/: test_conversations.py  test_knowledge.py  test_rules.py
backend/tests/test_tidio/: test_webhook_handler.py
deploy/: setup.sh  (+2 more)
(+35 files in other folders)
